Fixes overlapping issue
Fixes #11

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -59,7 +59,6 @@ main {
 
 .profile-card {
     min-height: 0;
-    min-width: 220px;
     width: 100%;
 }
 
